8377629: jpackage: Tighten up output validation in tests
Reviewed-by: almatvee